--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-大家好，我是AnitaRan，这篇文章是关于天池学习赛二手车交易价格预测的建模方案，作为自己学习数据挖掘的记录笔记。附上现附上比赛链接天池学习赛二手车交易价格预测https://tianchi.aliyun.com/competition/entrance/231784
+大家好，我是AnitaRan，这篇文章是关于天池学习赛二手车交易价格预测的建模方案，作为自己学习数据挖掘的记录笔记。现附上比赛链接天池学习赛二手车交易价格预测https://tianchi.aliyun.com/competition/entrance/231784
